Bug 1094678 - MediaCodecReader::CreateTaskQueues() runs at main thread. r=cpearce, r=brsun